--- a/index.html
+++ b/index.html
@@ -571,33 +571,33 @@ p {
 
     <section id="services" class="lax lax_preset_scaleInOut:158.25:0.6">
       <div>
-        <img src="image/p1.png" alt="" />
+        <img src="p1.png" alt="" />
         <p>Self Priming</p>
       </div>
       <div>
-        <img src="image/p2.png" alt="" />
+        <img src="p2.png" alt="" />
         <p>Superior Coverage</p>
       </div>
       <div>
-        <img src="image/p1.png" alt="" />
+        <img src="p1.png" alt="" />
         <p>Highly Washable</p>
       </div>
       <div>
-        <img src="image/p3.png" alt="" />
+        <img src="p3.png" alt="" />
         <p>Extremely Durable</p>
       </div>
     </section>
     <section id="quality">
       <div>
-        <img src="image/img1.jpg" alt="" class="lax lax_preset_hueRotate:633:360" />
+        <img src="img1.jpg" alt="" class="lax lax_preset_hueRotate:633:360" />
         <p>Color Palletes</p>
       </div>
       <div>
-        <img src="image/img2.jpg" alt="" class="lax lax_preset_hueRotate:633:360" />
+        <img src="img2.jpg" alt="" class="lax lax_preset_hueRotate:633:360" />
         <p>Best Sellings</p>
       </div>
       <div>
-        <img src="image/img3.jpg" alt="" class="lax lax_preset_hueRotate:633:360" />
+        <img src="img3.jpg" alt="" class="lax lax_preset_hueRotate:633:360" />
         <p>Top Colors</p>
       </div>
     </section>
@@ -606,7 +606,7 @@ p {
       <h1>Featured Product</h1>
       <div class="featured-row">
         <div class="featured-left-col">
-          <img src="image/p5.jpg" alt="" class="lax lax_preset_flipX:633:360"/>
+          <img src="p5.jpg" alt="" class="lax lax_preset_flipX:633:360"/>
         </div>
         <div class="featured-right-col">
           <h2>Best Quality Paints</h2>
@@ -617,7 +617,7 @@ p {
           <button>Shop Now</button>
         </div>
         <div class="featured-left-col">
-          <img src="image/p6.jpg" alt="" class="lax lax_preset_flipY:633:360" />
+          <img src="p6.jpg" alt="" class="lax lax_preset_flipY:633:360" />
         </div>
         <div class="featured-right-col lax lax_preset_fadeInOut:158.25:0">
           <h2>Quality Brushes</h2>
@@ -645,23 +645,23 @@ p {
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="image/img4.png" alt="" />
+            <img src="img4.png" alt="" />
             <p>Aren moli</p>
           </div>
           <div class="swiper-slide">
-            <img src="image/img5.jpg" alt="" />
+            <img src="img5.jpg" alt="" />
             <p>Kevin</p>
           </div>
           <div class="swiper-slide">
-            <img src="image/img6.jpg" alt="" />
+            <img src="img6.jpg" alt="" />
             <p>MoliSh</p>
           </div>
           <div class="swiper-slide">
-            <img src="image/img7.jpg" alt="" />
+            <img src="img7.jpg" alt="" />
             <p>Anim</p>
           </div>
           <div class="swiper-slide">
-            <img src="image/img8.jpg" alt="" />
+            <img src="img8.jpg" alt="" />
             <p>Kristin</p>
           </div>
         </div>
