--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       header {
         width: 100%;
         height: 100vh;
-        background: url(image/sofa.jpg);
+        background: url(sofa.jpg);
         background-size: 100% 100%;
         position: relative;
         text-align: center;
